--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
         <div class="imagePlaceholder">this is a placeholder for an image</div>
     </div>
 
+    <div class="information">
+        <h2>Some random information</h2>
+        <div class="items">
+            <div class="item">
+                <div class="block"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="block"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="block"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="block"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
     <footer>
 
     </footer>
