--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         </div>
     </div>
 
+    <div class="quotes">
+        <div class="container">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+    </div>
+
     <footer>
 
     </footer>
