--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
         </div>
     </div>
 
+    <div class="signup">
+        <div class="banner">
+            <div class="texts">
+                Call to action! It's time!
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+
     <footer>
 
     </footer>
